--- a/gb/20/6/1/n12152392.md
+++ b/gb/20/6/1/n12152392.md
@@ -1,19 +1,19 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/bg209/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/bg209/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/bg209/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/bg209/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/bg209/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/bg209/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/bg209/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/bg209/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/bg209/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/bg209/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/bg209/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/bg209/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/bg209/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/bg209/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/bg209/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/bg209/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/bg209/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/bg209/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/bg209/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/bg209/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/bg209/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/bg209/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/bg209/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/bg209/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/bg209/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/bg209/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/bg209/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/bg209/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/bg209/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/bg209/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/bg209/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/bg209/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/bg209/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/bg209/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/bg209/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/bg209/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/bg209/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/bg209/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/bg209/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/bg209/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/bg209/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/bg209/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/bg209/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/bg209/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/bg209/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>河北邯郸 遭中共迫害致死致疯的法轮功学员</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/06/65bea4c53a6c668564e92efdcecba537.jpg" />
 <h6>为逼迫法轮功学员放弃修炼，中共对他们实施药物迫害。（明慧网）
 </h6>
 <hr>
-	<p>【大纪元2020年06月01日讯】看守所的警察扒光了六十多岁的老太太的衣服，往她身上倒结了冰的冷水，摧残她半个月后，再向其家人勒索了五六万元才放她回家。其丈夫同时被非法劳教，回家时神情呆滞，不能说话，后凄惨离世。</p>
-<p><ahref="https://github.com/bg209/djy/blob/master/gb/tag/%E6%9D%A8%E5%AE%9D%E6%98%A5.md#1">杨宝春</a>的家人终于把他从永康精神病院接回家后，却发现他已经完全变得精神失常，在极度痛苦和无奈之下，又把他送进了精神病院。</p>
-<p>他们都是河北邯郸市的法轮功学员。20年来，该市被中共迫害致精神失常的法轮功学员共计26人，其中16人被迫害致死，还有两人九死一生，但已被迫害成为真正的精神病人，至今仍被关押在精神病院，<ahref="https://github.com/bg209/djy/blob/master/gb/tag/%E6%9D%A8%E5%AE%9D%E6%98%A5.md#1">杨宝春</a>就是其中的一位。</p>
+	<p>【大纪元2020年06月01日讯】看守所的警察扒光了六十多岁的老太太的衣服，往她身上倒结了冰的冷水，摧残她半个月后，再向其家人勒索了五六万元才放她回家。其丈夫<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%9D%A8%E5%AE%9D%E6%98%A5.md#1">杨宝春</a>同时被非法劳教，回家时神情呆滞，不能说话，后凄惨离世。</p>
+<p><ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%9D%A8%E5%AE%9D%E6%98%A5.md#1">杨宝春</a>的家人终于把他从永康精神病院接回家后，却发现他已经完全变得精神失常，在极度痛苦和无奈之下，又把他送进了精神病院。</p>
+<p>他们都是河北邯郸市的法轮功学员。20年来，该市被中共迫害致精神失常的法轮功学员共计26人，其中16人被迫害致死，还有两人九死一生，但已被迫害成为真正的精神病人，至今仍被关押在精神病院，杨宝春就是其中的一位。</p>
 <p>1999年7月20日中共迫害法轮功以来，邯郸地区各级政法委、“610”（专门迫害法轮功学员的非法机构）、及公、检、法、司部门，追随中共江泽民迫害集团，非法劳教、关押、摧残、判刑当地法轮功学员。</p>
-<p>为了强迫法轮功学员“转化”（放弃修炼），当地看守所、劳教所、监狱等机构实施各种酷刑迫害手段，尤其是给法轮功学员<ahref="https://github.com/bg209/djy/blob/master/gb/tag/%E6%89%93%E6%AF%92%E9%92%88.md#1">打毒针</a>，用暴力手段强迫他们服用大量不明药物，对他们进行严酷的折磨和虐杀。</p>
+<p>为了强迫法轮功学员“转化”（放弃修炼），当地看守所、劳教所、监狱等机构实施各种酷刑迫害手段，尤其是给法轮功学员<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%89%93%E6%AF%92%E9%92%88.md#1">打毒针</a>，用暴力手段强迫他们服用大量不明药物，对他们进行严酷的折磨和虐杀。</p>
 <p>下面列举其中的几个典型案例。</p>
-<h2><b>被强行<ahref="https://github.com/bg209/djy/blob/master/gb/tag/%E6%89%93%E6%AF%92%E9%92%88.md#1">打毒针</a> 卢兆峰英年早逝</b></h2>
-<figure id="attachment_12152438" style="width: 109px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/06/2020-5-30-205621-0.jpg"><img class="wp-image-12152438 size-full" src="https://i.epochtimes.com/assets/uploads/2020/06/2020-5-30-205621-0.jpg" alt="" width="109" b="157" /></a><figcaption class="wp-caption-text">卢兆峰（明慧网）</figcaption></figure>
+<h2><b>被强行<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%89%93%E6%AF%92%E9%92%88.md#1">打毒针</a> 卢兆峰英年早逝</b></h2>
+<figure id="attachment_12152438" aria-describedby="caption-attachment-12152438" style="width: 109px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/06/2020-5-30-205621-0.jpg"><img class="wp-image-12152438 size-full" src="https://i.epochtimes.com/assets/uploads/2020/06/2020-5-30-205621-0.jpg" alt="" width="109" b="157" /></a><figcaption id="caption-attachment-12152438" class="wp-caption-text">卢兆峰（明慧网）</figcaption></figure>
 <p>卢兆峰，时年三十多岁，是河北邯郸大名县埝头乡刘庄村的法轮功学员。2001年黄历9月，被关押在邯郸劳教所迫害；十多天后，又被转送到河北保定高阳劳教所非法关押，于2002年6月30日被迫害致死。</p>
 <p>2001年8月28日上午，大名县公安局出动十几辆警车，几十名警察将卢兆峰从家里绑架并抄家，抢走电脑、法轮功真相资料等物品。后他被非法劳教，关押在邯郸劳教所迫害。</p>
 <p>在劳教所二队队长李海明的授意下，狱警给卢兆峰戴上头盔，用穿着皮鞋的脚踢他，用橡胶棒打他，不让他睡觉。卢兆峰被折磨了12天后，又被转押到河北保定高阳劳教所非法关押。</p>
@@ -23,9 +23,9 @@
 <p>高阳劳教所的一个狱警曾对在押人员说：“你们知道什么样的人员才能办保外就医吗？除了花了大把钱的，就是五脏六腑都衰竭了，就知道你已经活不成了，为了不让你死在劳教所，才让你回家的，所以你就是回去了，也活不了几天。”</p>
 <p>卢兆峰真的没熬到过年，回家20天后，就溘然辞世。</p>
 <h2>杨宝春<b>被药物摧残成精神病人 仍被关在精神病院</b></h2>
-<figure id="attachment_12152529" style="width: 214px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/06/2020-5-30-205621-5-ss.jpg"><img class="size-full wp-image-12152529" src="https://i.epochtimes.com/assets/uploads/2020/06/2020-5-30-205621-5-ss.jpg" alt="" width="214" b="300" /></a><figcaption class="wp-caption-text">杨宝春被迫害得截肢后的照片。（明慧网）</figcaption></figure>
+<figure id="attachment_12152529" aria-describedby="caption-attachment-12152529" style="width: 214px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/06/2020-5-30-205621-5-ss.jpg"><img class="size-full wp-image-12152529" src="https://i.epochtimes.com/assets/uploads/2020/06/2020-5-30-205621-5-ss.jpg" alt="" width="214" b="300" /></a><figcaption id="caption-attachment-12152529" class="wp-caption-text">杨宝春被迫害得截肢后的照片。（明慧网）</figcaption></figure>
 <p>杨宝春，邯郸市锦航绒布厂法轮功学员，被迫害时年仅30岁。</p>
-<figure id="attachment_12152587" style="width: 280px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/06/2008-5-22-zilioa-01.jpg"><img class=" wp-image-12152587" src="https://i.epochtimes.com/assets/uploads/2020/06/2008-5-22-zilioa-01-600x405.jpg" alt="" width="280" b="189" /></a><figcaption class="wp-caption-text">杨宝春未被迫害之前的炼功照片。（明慧网）</figcaption></figure>
+<figure id="attachment_12152587" aria-describedby="caption-attachment-12152587" style="width: 280px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/06/2008-5-22-zilioa-01.jpg"><img class=" wp-image-12152587" src="https://i.epochtimes.com/assets/uploads/2020/06/2008-5-22-zilioa-01-600x405.jpg" alt="" width="280" b="189" /></a><figcaption id="caption-attachment-12152587" class="wp-caption-text">杨宝春未被迫害之前的炼功照片。（明慧网）</figcaption></figure>
 <p>2000年杨宝春被非法劳教，期间因坚持法轮功信仰和坚持炼功，多次被劳教所警察毒打、体罚，不让睡觉。</p>
 <p>2000年冬天，邯郸劳教所警察薛沛军以杨宝春坚持炼功为由，把他的棉鞋扔到房上，让他光着脚站在雪地上挨冻，回屋后警察有意用很热的水给他烫脚，使杨宝春的脚很快严重溃烂化脓。</p>
 <p>后来溃烂面积越来越大，警察才把他送到邯郸纺织局医院，终因伤势蔓延危及到生命，他的右腿被截肢，造成其终身残疾。</p>
@@ -33,7 +33,7 @@
 <p>在刚到安康精神病院时，杨宝春意识还非常清楚，不愿待在精神病院遭人暗算，多次想逃离那里。医生们就派人24小时盯着他。只要看见他在外面就硬拖他回屋，致使他的臀部磨出血痂。这伙人还多次对他进行电击和毒打，最后杨宝春精神上真的出现了问题。</p>
 <p>2009年1月20日，杨宝春的家人把他从永康精神病院接回家后，发现他已经完全变成了一个精神失常的人。家人带着极大的痛苦和无奈，只好将他送入精神病院，现在他仍关在精神病院。</p>
 <h2>妻子遭羞辱 丈夫被害死 家里50万元被抢劫</h2>
-<figure id="attachment_12152618" style="width: 238px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/06/2020-5-30-205621-7.jpg"><img class="wp-image-12152618 size-full" src="https://i.epochtimes.com/assets/uploads/2020/06/2020-5-30-205621-7.jpg" alt="" width="238" b="280" /></a><figcaption class="wp-caption-text">酷刑演示：往身上倒结冰水。（明慧网）</figcaption></figure>
+<figure id="attachment_12152618" aria-describedby="caption-attachment-12152618" style="width: 238px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/06/2020-5-30-205621-7.jpg"><img class="wp-image-12152618 size-full" src="https://i.epochtimes.com/assets/uploads/2020/06/2020-5-30-205621-7.jpg" alt="" width="238" b="280" /></a><figcaption id="caption-attachment-12152618" class="wp-caption-text">酷刑演示：往身上倒结冰水。（明慧网）</figcaption></figure>
 <p>鸡泽县公安局长马金献和县政法委书记杨芹芳知道法轮功学员陈振宇夫妇家里很有钱（两人的孩子有在银行上班的、有经商的），他们就阴谋策划绑架陈振宇夫妇，并抄家、搜刮钱财。</p>
 <p>2005年正月15日夜间11点钟，公安局长马金献带领政保股长陈淑萍、黄辰善等十多人闯入陈振宇家，将夫妇两人及他们不修炼的儿子、儿媳妇共5口人绑架、抄家，抢劫现金36万元。</p>
 <p>陈振宇家是个大家族，夫妻俩有4个儿子、4个儿媳，孩子们的钱财物都在自家里放着。当时在家的是二儿子、二儿媳、四儿子和陈振宇夫妇。不修炼的儿子们被拳打脚踢，家里所有的钱和值钱的财物被抢劫一空。3个不修炼的孩子被非法关押，敲诈勒索近6万元后才被放回家。</p>
@@ -60,36 +60,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/bg209/djy/blob/master/gb/8/11/10/n2324673.md#1">贵州法轮功学员韩铭被药物迫害致死</a></li>
-<li><a href="https://github.com/bg209/djy/blob/master/gb/10/3/21/n2851532.md#1">联合国内研讨审江案及中共药物迫害法轮功</a></li>
-<li><a href="https://github.com/bg209/djy/blob/master/gb/11/4/13/n3226571.md#1">武穴市多名法轮功学员遭药物迫害无法说话</a></li>
-<li><a href="https://github.com/bg209/djy/blob/master/gb/19/3/19/n11124316.md#1">安康医院 药物迫害法轮功学员的秘密场所</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/11/10/n2324673.md#1">贵州法轮功学员韩铭被药物迫害致死</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/3/21/n2851532.md#1">联合国内研讨审江案及中共药物迫害法轮功</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/4/13/n3226571.md#1">武穴市多名法轮功学员遭药物迫害无法说话</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/3/19/n11124316.md#1">安康医院 药物迫害法轮功学员的秘密场所</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/5/23/n10420942.md#1" target="_blank">本真：《推背图》预言中美朝日大战及结局（一）</a></li><li><a href="https://github.com/bg209/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank">亿万人与东方一本奇书</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/9/23/n9661042.md#1" target="_blank">修大法顽疾遁无形 做好人春风化雨润无声</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank">海峡两岸的强烈对比</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/12/n9951023.md#1" target="_blank">林辉：周恩来如此对待两位救命恩人</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/4/21/n11203160.md#1" target="_blank">一位北京法轮功学员经历的4·25大上访</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/bg209/djy/blob/master/gb/20/6/1/n12151299.md#1">宝雅备百万片MIT医疗口罩 不限制购买数量</a></li>
-<li><a href="https://github.com/bg209/djy/blob/master/gb/20/5/31/n12150748.md#1">川普：将宣布Antifa为恐怖主义组织</a></li>
-<li><a href="https://github.com/bg209/djy/blob/master/gb/20/5/31/n12150559.md#1">成龙挺港版国安法 联署声明惊现死者名字</a></li>
-<li><a href="https://github.com/bg209/djy/blob/master/gb/20/6/1/n12153549.md#1">宣传照被抓包 两会武警倒看报 官媒急删</a></li>
-<li><a href="https://github.com/bg209/djy/blob/master/gb/20/6/1/n12151330.md#1">中共利用美非裔之死抹黑美国 蓬佩奥回应</a></li>
-<li><a href="https://github.com/bg209/djy/blob/master/gb/20/6/2/n12155025.md#1">黄秋生出现在路边坐塑胶椅 网友：也太路人了</a></li>
-<li><a href="https://github.com/bg209/djy/blob/master/gb/20/5/31/n12150886.md#1">成龙联署挺港版国安法 名单现大S本名引热议</a></li>
-<li><a href="https://github.com/bg209/djy/blob/master/gb/20/6/1/n12153202.md#1">日本知名女星小泉今日子 签名抵制港版国安法</a></li>
-<li><a href="https://github.com/bg209/djy/blob/master/gb/20/5/31/n12150765.md#1">刘诗诗产后复出 吴奇隆首谈爸爸经</a></li>
-<li><a href="https://github.com/bg209/djy/blob/master/gb/20/6/1/n12152028.md#1">五月天线上开唱全球4244万人观赏 登发烧影片</a></li>
-<li><a href="https://github.com/bg209/djy/blob/master/gb/20/5/31/n12149532.md#1">重庆退伍老兵游历阴曹地府 见到阎王爷</a></li>
-<li><a href="https://github.com/bg209/djy/blob/master/gb/20/5/1/n12076592.md#1">那一场雪天围炉</a></li>
-<li><a href="https://github.com/bg209/djy/blob/master/gb/20/6/1/n12152526.md#1">轮回辗转 为何大多数人不记得前世？</a></li>
-<li><a href="https://github.com/bg209/djy/blob/master/gb/10/3/24/n2854895.md#1">杨通幽上天下地 寻到太真女仙杨贵妃</a></li>
-<li><a href="https://github.com/bg209/djy/blob/master/gb/20/5/26/n12137883.md#1">鲁本斯笔下的圣洛克——无惧瘟疫的慈悲</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615200.md#1">吴明德：中共暗撑俄侵乌 恐成国际大输家</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614863.md#1">《梁祝》小提琴协奏曲</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613897.md#1">【十字路口】锁链女遭拐卖凌虐 幕后大黑手曝光？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612151.md#1">TVB视后胡定欣确诊 陈豪吓得睡觉都戴口罩</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13607888.md#1">调查：十对夫妻中三对存在“财务不忠”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/bg209/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/bg209/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/6/1/n12152392.htm">河北邯郸 遭中共迫害致死致疯的法轮功学员</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/6/1/n12152392.htm">河北邯郸 遭中共迫害致死致疯的法轮功学员</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/bg209/djy/blob/master/gb/20/6/1/n12152392.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/bg209/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bg209/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/bg209/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/bg209/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/bg209/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bg209/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/bg209/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bg209/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/bg209/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bg209/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/bg209/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bg209/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/bg209/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bg209/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/bg209/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bg209/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/bg209/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bg209/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/bg209/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bg209/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/bg209/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bg209/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/bg209/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bg209/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/bg209/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bg209/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/bg209/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bg209/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/bg209/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bg209/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/bg209/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bg209/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/bg209/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bg209/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/bg209/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bg209/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/bg209/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bg209/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/bg209/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bg209/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/bg209/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bg209/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/bg209/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bg209/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/bg209/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bg209/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/bg209/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bg209/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/20/6/1/n12152392.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
